--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Noticia+Text&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noticia+Text&family=Open+Sans:wght@500&display=swap');
 
-body {
+html, body {
     margin: 0;
     padding: 0;
+}
+
+body {
     font-family: 'Noticia Text', serif;
     display: flex;
     align-items: center;
     justify-content: center;
-    /* background-color: #222222; */
+    /* width: 100vw;
+    height: 100vh; */
 }
 
 .left-container {
@@ -17,17 +21,25 @@ body {
     justify-content: space-between;
     height: 100vh;
     width: 40vw;
-    background-image: url("./img/river.jpg");
+    background-image: url("./img/deer.jpg");
     background-size: 100vh;
     background-position: center;
 }
-.right-container {
-    height: 100vh;
+
+.left-container p {
+    background-color: rgba(255, 255, 255, 0.295);
+    padding: 5px 10px;
+    border-radius: 5px;
+    font-size: 12px;
+    text-decoration: none;
+    margin: 0;
 }
 
-/* img {
-    max-width: 40%;
-} */
+.left-container p a {
+    text-decoration: none;
+    color: black;
+    text-decoration: underline;
+}
 
 img[src$=".svg"] {
     max-width: 100px;
@@ -38,10 +50,82 @@ img[src$=".svg"] {
     width:inherit;
     background-color: #000000ce;
     color: white;
-    font-size: 60px;
+    font-size: 5em;
     display: flex;
     align-items: center;
     justify-content: center;
-    margin-top: 30vh;
+    margin-top: 20vh;
     padding: 20px 0;
+}
+
+.right-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100vh;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 24px;
+    font-weight: 800;
+    width: 60vw;
+    background-color: rgb(250, 250, 250);
+}
+
+.right-container > :first-child{
+    max-width: 800px;
+    padding: 0 120px 50px 50px;
+}
+
+.right-container > :nth-child(2) {
+    display: flex;
+    flex-direction: column;
+    padding: 0 50px 30px 50px;
+    background-color: white;
+    box-shadow: 0 5px 5px 0 rgba(0, 0, 0, 0.19), 0 -1px 5px 0 rgba(0, 0, 0, 0.103);
+}
+
+.input-grid {
+    display: flex;
+    flex-direction: column;
+    font-size: 12px;
+    color: rgb(26, 26, 26);
+}
+.left-inputs, .right-inputs {
+    flex-grow: 1;
+    align-items: left;
+}
+
+.input-grid > fieldset {
+    display: flex;
+    max-width: 400px;
+    border: none;
+}
+
+input {
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.right-container > :last-child {
+    padding: 40px 0 0 50px;
+    font-size: 16px;
+}
+
+.button{
+    font-size: 16px;
+    padding: 10px 50px;
+    border-radius: 10px;
+    border: none;
+    background-color: #515a24;
+    color: white;
+    font-weight: 900;
+    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.301);
+}
+
+.button:hover {
+    background-color: #464e1f;
+}
+
+.button:active {
+    box-shadow: 0 10px 10px 0 rgba(0, 0, 0, 0.527);
+    background-color: #363b17;
 }
